# Talkbox-client

./: .gitignore  AGENTS.md  API.md  CMakeLists.txt  README.md  apiclient.cpp  apiclient.h
.github/workflows/: ci.yml
src/: appmanager.cpp  appmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/auth/: LoginDialog.cpp  LoginDialog.h  LoginDialog.ui  RegisterDialog.h  RegisterDialog.ui  loginwidget.cpp  loginwidget.h  register.ui  registerwidget.cpp  registerwidget.h
src/chat/: ChatWindow.cpp  ChatWindow.h  ChatWindow.ui  ContactList.cpp  ContactList.h  ContactList.ui  GroupManager.cpp  GroupManager.h  GroupManager.ui  chat_main.ui  chatmainwidget.cpp  chatmainwidget.h  create_group_dialog.ui
src/common/: HttpClient.cpp  HttpClient.h
src/forum/: CreatePost.cpp  CreatePost.h  CreatePost.ui  ForumWidget.cpp  ForumWidget.h  ForumWidget.ui  PostDetail.cpp  PostDetail.h  PostDetail.ui  forum_main.ui  forummainwidget.cpp  forummainwidget.h
ui/auth/: login.ui
ui/forum/: new_post_dialog.ui  post_detail.ui
